k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: edx-poc-svc
  namespace: edx-poc
spec:
  selector:
    app: edx-poc
  ports:
    - port: 80
      targetPort: 80
  type: NodePort
